<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="imageview">ImageView content description</string>
    
    <string name="app_name">OKnow</string>
	
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_another_way_describe">You can also login with:</string>
	<string name="login_register_describe">Don\'t have an account yet?</string>
	<string name="login_logging_msg">Logging in&#8230;</string>
	<string name="login_failure">登入失敗</string>
		
	<string name="signup_username">Username</string>
	<string name="signup_password">Password</string>
	<string name="signup_email">Email</string>
	<string name="signup_phone">Phone Number</string>
	<string name="signup_signing_msg">Signing up&#8230;</string>
	<string name="signup_success">註冊成功</string>
	<string name="signup_failure">註冊失敗</string>
	
	<string name="maintab_chat">首頁</string>
	<string name="maintab_map">地圖</string>
	<string name="maintab_info">資訊</string>
	<string name="maintab_setting">設定</string>

    <string name="chat_default_weather">-</string>
    <string name="chat_uvi_label">紫外線指數</string>
    <string name="chat_psi_label">空氣污染指標</string>
    <string name="chat_msv_label">輻射劑量</string>
    <string name="chat_uvi_default">-</string>
    <string name="chat_psi_default">-</string>
    <string name="chat_msv_default">-</string>
	<string name="chat_know_tab">- 附近發生</string>
	<string name="chat_know_title">附近該注意的事</string>
	<string name="chat_gotopbar_default">附近景點</string>

	<string name="map_where_am_i">我在哪裡？</string>
	<string name="map_temperature_default">-</string>
	<string name="map_weather_default">-</string>
	
	<string-array name="post_categories">
		<item>緊急</item>
		<item>注意</item>
　		<item>交通事故</item>
        <item>天氣</item>
        <item>心情</item>
        <item>美食</item>
        <item>購物</item>
		<item>玩樂</item>
		<item>住宿</item>
	</string-array>
	<string name="post_cancel">捨棄</string>
	<string name="post_title">OKnow</string>
	<string name="post_push">發佈</string>
	<string name="post_category_default">美食</string>
	<string name="post_content_default">你想說什麼嗎？</string>
	<string name="post_posting">Posting&#8230;</string>
	<string name="post_success">發文成功！</string>
	<string name="post_failure">發文失敗！</string>
	
	<string name="info_fetch_data_msg">Fetch Personal Data&#8230;</string>
	<string name="info_fetch_data_failure">Get PersonalInfo Failure</string>
	<string name="info_username_default">unknown</string>
	<string name="info_overview_tab">資訊總覽</string>
	<string name="info_score_describe">Know 積分</string>
	<string name="info_score_default">- points</string>
	<string name="info_score">%d points</string>
	<string name="info_level_describe">OKnow 等級</string>
	<string name="info_level_default">LV. -</string>
	<string name="info_level">LV. %d</string>
	<string name="info_posts_describe">發文總數</string>
	<string name="info_posts_default">-</string>
	<string name="info_posts">%d</string>
	<string name="info_popularity_use_describe">集氣次數</string>
	<string name="info_popularity_use_default">-</string>
	<string name="info_popularity_use">%d</string>
	<string name="info_popularity_get_describe">累積集氣</string>
	<string name="info_popularity_get_default">-</string>
	<string name="info_popularity_get">%d</string>
	<string name="info_know_tab">KNOW資訊</string>
	<string name="info_records">發文記錄</string>

	<string name="setting_know_tab">KNOW設定</string>
	<string name="setting_posts_describe">發文</string>
	<string name="setting_posts_default">匿名</string>
	<string name="setting_posts_msg">目前只開放匿名，敬請期待下一個版本的更新。</string>
	<string name="setting_distance_describe">關心距離</string>
	<string name="setting_distance_default">1 km</string>
	<string name="setting_distance_msg">距離設定，敬請期待下一個版本的更新。</string>
	<string name="setting_update_describe">資料更新</string>
	<string name="setting_update_default">自動</string>
	<string name="setting_update_msg">資料更新方式，敬請期待下一個版本的更新。</string>
	<string name="setting_default">預設的設定</string>
	<string name="setting_about_us">關於我們</string>
	<string name="setting_logout">登出</string>
	<string name="setting_logout_msg">已成功登出</string>
		
	<string name="know_back">〈Back</string>
	<string name="know_title">注意</string>
	<string name="know_message">Look out the stair!</string>
	<string name="know_tagname">注意</string>
	<string name="know_powerup">集氣</string>
	<string name="know_more">了解更多</string>
	<string name="know_powerup_msg">集氣中&#8230;</string>
	<string name="know_powerup_success">集氣成功</string>
	<string name="know_powerup_failure">集氣失敗</string>
	
	<string name="knowitem_content_default">bulubulu</string>
	<string name="knowitem_distance_default">distance 300 m</string>
	<string name="knowitem_category_default">happy</string>
	<string name="knowitem_popularity_default">+10</string>

	<string name="placeitem_content_default">bulubulu</string>
	
	<string name="simplelist_back">〈Back</string>
	<string name="simplelist_title">發文記錄</string>
	
	<string name="common_no_locate">目前無法取得定位服務，請確認網路是否正常並稍待片刻</string>
	<string name="common_distance_meter">距離 %.0f 公尺</string>
	<string name="common_distance_kilometer">距離 %.2f 公里</string>
	<string name="common_temperature">%.1f°C</string>
	
	<string name="dialog_confirm">確定</string>
				
</resources>
