<com.neverworker.oknow.widget.PercentAnimFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.neverworker.oknow.MainActivity$InfoFragment"
    >
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
		<LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
		    android:orientation="vertical"
		    >
			<RelativeLayout 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			    >
			    <com.neverworker.oknow.widget.BannerView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:adjustViewBounds="true"
					android:src="@drawable/info_banner"
			        />
			    <com.neverworker.oknow.widget.RoundedImageView 
			        android:id="@+id/info_picture"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_alignParentBottom="true"
					android:layout_centerInParent="true"
					android:padding="10dip"
					android:scaleType="fitCenter"
					android:src="@drawable/post_unknownuser"
			        />
			    <TextView
			        android:id="@+id/info_username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:gravity="center|bottom"
					android:textColor="@android:color/white"
					android:textSize="30sp"
					android:text="@string/info_username_default"
			        />
			</RelativeLayout>
		    <TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dip"
				android:paddingLeft="10dip"
				android:paddingTop="20dip"
				android:text="@string/info_overview_tab"
		        />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="20dip"
				android:background="@android:color/white"
		        >
			    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:layout_margin="10dip"
						android:gravity="center|left"
						android:textSize="24sp"
						android:text="@string/info_score_describe"
			            />
			        <TextView
					    android:id="@+id/info_points"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginRight="14dip"
						android:layout_gravity="center|right"
						android:gravity="center|right"
						android:textSize="20sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/info_score_default"
			            />
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:layout_margin="10dip"
						android:gravity="center|left"
						android:textSize="24sp"
						android:text="@string/info_level_describe"
			            />
			        <TextView
					    android:id="@+id/info_level"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginRight="14dip"
						android:layout_gravity="center|right"
						android:gravity="center|right"
						android:textSize="20sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/info_level_default"
			            />
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:layout_margin="10dip"
						android:gravity="center|left"
						android:textSize="24sp"
						android:text="@string/info_posts_describe"
			            />
			        <TextView
					    android:id="@+id/info_posts"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginRight="14dip"
						android:layout_gravity="center|right"
						android:gravity="center|right"
						android:textSize="20sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/info_posts_default"
			            />
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:layout_margin="10dip"
						android:gravity="center|left"
						android:textSize="24sp"
						android:text="@string/info_popularity_use_describe"
			            />
			        <TextView
					    android:id="@+id/info_popularity_used"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginRight="14dip"
						android:layout_gravity="center|right"
						android:gravity="center|right"
						android:textSize="20sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/info_popularity_use_default"
			            />
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="2"
						android:layout_margin="10dip"
						android:gravity="center|left"
						android:textSize="24sp"
						android:text="@string/info_popularity_get_describe"
			            />
			        <TextView
					    android:id="@+id/info_popularity_got"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_marginRight="14dip"
						android:layout_gravity="center|right"
						android:gravity="center|right"
						android:textSize="20sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/info_popularity_get_default"
			            />
			    </LinearLayout>
			</LinearLayout>
			
		    <TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dip"
				android:paddingLeft="10dip"
				android:paddingTop="20dip"
				android:text="@string/info_know_tab"
		        />
		    
		    <LinearLayout
			    android:id="@+id/info_post_records"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dip"
				android:paddingLeft="20dip"
				android:background="@android:color/white"
				android:orientation="horizontal"
		        >
		        <TextView
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_margin="10dip"
					android:gravity="center|left"
					android:textSize="24sp"
					android:text="@string/info_records"
		            />
			    <LinearLayout 
				    android:layout_width="30dip"
			    	android:layout_height="match_parent"
					android:layout_marginLeft="10dp"
			        >
				    <ImageView
				        android:contentDescription="@string/imageview"
					    android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
						android:layout_gravity="center"
					    android:src="@drawable/common_arrow_right"
					    />
			    </LinearLayout>
		    </LinearLayout>				
	    </LinearLayout>
	</ScrollView>
</com.neverworker.oknow.widget.PercentAnimFrameLayout>