<com.neverworker.oknow.widget.PercentAnimFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.neverworker.oknow.MainActivity$SettingFragment">
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
		<LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
		    android:orientation="vertical"
		    >
		    <com.neverworker.oknow.widget.BannerView 
		        android:id="@+id/setting_banner"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:adjustViewBounds="true"
				android:scaleType="centerCrop"
				android:src="@drawable/setting_banner"
		        />
		    <TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dip"
				android:paddingLeft="10dip"
				android:paddingTop="20dip"
				android:text="@string/setting_know_tab"
		        />
		    <LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="20dip"
				android:background="@android:color/white"
		        >
			    <LinearLayout
				    android:id="@+id/setting_post_amount"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|left"
						android:textSize="26sp"
						android:text="@string/setting_posts_describe"
			            />
			        <TextView
					    android:id="@+id/setting_post_amount_value"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|right"
						android:textSize="26sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/setting_posts_default"
			            />
				    <LinearLayout 
					    android:layout_width="30dip"
				    	android:layout_height="match_parent"
						android:layout_marginLeft="10dp"
				        >
					    <ImageView
					        android:contentDescription="@string/imageview"
						    android:layout_width="wrap_content"
					    	android:layout_height="wrap_content"
							android:layout_gravity="center"
						    android:src="@drawable/common_arrow_right"
						    />
				    </LinearLayout>
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
				    android:id="@+id/setting_care_distance"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|left"
						android:textSize="26sp"
						android:text="@string/setting_distance_describe"
			            />
			        <TextView
					    android:id="@+id/setting_care_distance_value"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|right"
						android:textSize="26sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/setting_distance_default"
			            />
				    <LinearLayout 
					    android:layout_width="30dip"
				    	android:layout_height="match_parent"
						android:layout_marginLeft="10dp"
				        >
					    <ImageView
					        android:contentDescription="@string/imageview"
						    android:layout_width="wrap_content"
					    	android:layout_height="wrap_content"
							android:layout_gravity="center"
						    android:src="@drawable/common_arrow_right"
						    />
				    </LinearLayout>
			    </LinearLayout>
			    <View
		    		android:layout_width="match_parent"
		    		android:layout_height="2dip"
		    		android:background="#AAAAAAAA"
		    		/>
			    <LinearLayout
				    android:id="@+id/setting_update"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
			        >
			        <TextView
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|left"
						android:textSize="26sp"
						android:text="@string/setting_update_describe"
			            />
			        <TextView
					    android:id="@+id/setting_update_value"
						android:layout_width="0dip"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:layout_margin="6dip"
						android:gravity="center|right"
						android:textSize="26sp"
						android:textColor="@color/oknow_blue"
						android:text="@string/setting_update_default"
			            />
				    <LinearLayout 
					    android:layout_width="30dip"
				    	android:layout_height="match_parent"
						android:layout_marginLeft="10dp"
				        >
					    <ImageView
					        android:contentDescription="@string/imageview"
						    android:layout_width="wrap_content"
					    	android:layout_height="wrap_content"
							android:layout_gravity="center"
						    android:src="@drawable/common_arrow_right"
						    />
				    </LinearLayout>
			    </LinearLayout>
		    </LinearLayout>
		    
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="4dip"
				android:paddingLeft="10dip"
				android:paddingTop="20dip"
				android:text="@string/setting_default"
		        />
			<TextView
			    android:id="@+id/setting_about_us"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dip"
				android:padding="8dip"
				android:gravity="center"
				android:background="@android:color/white"
				android:textSize="26sp"
				android:text="@string/setting_about_us"
		        />
			<TextView
			    android:id="@+id/setting_logout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dip"
				android:padding="8dip"
				android:gravity="center"
				android:background="@android:color/white"
				android:textSize="26sp"
				android:text="@string/setting_logout"
		        />
		</LinearLayout>
	</ScrollView>
</com.neverworker.oknow.widget.PercentAnimFrameLayout>