<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="155dip"
    android:paddingLeft="20dip"
    >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:baselineAligned="false"
	    android:orientation="horizontal"
	    >
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
			android:layout_weight="3"
	    	android:orientation="vertical"
	        >
		   	<TextView
				android:id="@+id/chat_item_know"
			    android:layout_width="match_parent"
		    	android:layout_height="110dip"
				android:layout_margin="3dp"
				android:gravity="center_vertical|left"
				android:textColor="@android:color/white"
				android:textSize="20sp"
			    android:text="@string/knowitem_content_default"
			    />
		    <TextView
				android:id="@+id/chat_item_distance"
			    android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
				android:layout_margin="3dp"
				android:gravity="center_vertical|left"
				android:textColor="@android:color/white"
			    android:text="@string/knowitem_distance_default"
			    />	    
	    </LinearLayout>
	    <LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
			android:layout_weight="7"
	    	android:orientation="vertical"
	        >
		   	<TextView
				android:id="@+id/chat_item_kind"
			    android:layout_width="match_parent"
		    	android:layout_height="110dip"
				android:layout_margin="3dp"
				android:gravity="center"
				android:textColor="@color/oknow_green"
				android:textSize="20sp"
			    android:text="@string/knowitem_category_default"
			    />
		        
		   	<TextView
				android:id="@+id/chat_item_power"
			    android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
				android:layout_margin="3dp"
				android:gravity="center"
				android:textColor="#ffff0000"
				android:textSize="14sp"
			    android:text="@string/knowitem_popularity_default"
			    />
	      
	    </LinearLayout>
	    
	    <LinearLayout 
		    android:layout_width="30dip"
	    	android:layout_height="match_parent"
			android:layout_margin="3dp"	        
	        >
		    <ImageView
		        android:contentDescription="@string/imageview"
		        android:id="@+id/chat_item_arrow"
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
				android:layout_gravity="center"
			    android:src="@drawable/common_arrow_right"
			    />
	    </LinearLayout>
	</LinearLayout>
    <View
    	android:layout_width="fill_parent"
    	android:layout_height="2dip"
    	android:layout_alignParentBottom="true"
    	android:background="#AAFFFFFF"
    	/>   	
</RelativeLayout>
