<com.neverworker.oknow.widget.PercentAnimFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.neverworker.oknow.MainActivity$KnowFragment">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    >
	
	    <RelativeLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:background="#FFEAEAEA"
	    	>
	    	<TextView 
				android:id="@+id/know_back"
				android:layout_centerVertical="true"
		    	android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:padding="8dip"
	    		android:gravity="center|left"
	    		android:textColor="#4455FF"
	    		android:textSize="22sp"
	    		android:text="@string/know_back"
	    	    />
	    	<TextView 
				android:id="@+id/know_title"
		    	android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
	    		android:padding="10dip"
	    		android:gravity="center"
	    		android:textSize="28sp"
	    		android:text="@string/know_title"
	    	    />
	    	
	    </RelativeLayout>
	    
	    <ScrollView
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
	        >
	    	<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
	    	    >
				<fragment
					android:id="@+id/know_map"
					android:layout_width="match_parent"
					android:layout_height="300dip"
					class="com.google.android.gms.maps.MapFragment"/>
				
				<TextView
					android:id="@+id/know_distance"
					android:layout_alignBottom="@id/know_map"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dip"
					android:gravity="center"
					android:textColor="@android:color/white"
					android:textSize="22sp"
				    />
		
				<RelativeLayout
				    android:id="@+id/know_detail"
					android:layout_below="@id/know_map"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="30dip"
					android:layout_marginRight="30dip"
					android:layout_marginTop="10dip"
					android:layout_marginBottom="10dip"
				    >
					<TextView
						android:id="@+id/know_message"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingRight="80dip"
						android:gravity="left|top"
						android:textSize="22sp"
						android:text="@string/know_message"
				        />
				    <TextView
						android:id="@+id/know_tagname"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="right|top"
						android:textColor="@color/oknow_green"
						android:textSize="22sp"
						android:text="@string/know_tagname"
				        />
				    <ImageView
				        android:contentDescription="@string/imageview"
						android:id="@+id/know_tagicon"
						android:layout_below="@id/know_tagname"
						android:layout_alignRight="@id/know_tagname"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="6dip"
				        />
				    
				</RelativeLayout>
	
			    <TextView
					android:id="@+id/know_powerup"
					android:layout_below="@id/know_detail"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dip"
					android:layout_marginLeft="24dip"
					android:layout_marginRight="24dip"
					android:layout_marginBottom="2dip"
					android:padding="12dip"
					android:gravity="center"
					android:background="#4455FF"
					android:textColor="@android:color/white"
					android:textSize="24sp"
					android:text="@string/know_powerup"
			        />
			    <TextView
					android:id="@+id/know_more"
					android:layout_below="@id/know_powerup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:layout_marginLeft="24dip"
					android:layout_marginRight="24dip"
					android:layout_marginBottom="10dip"
					android:padding="12dip"
					android:gravity="center"
					android:background="@color/oknow_green"
					android:textColor="@android:color/white"
					android:textSize="24sp"
					android:text="@string/know_more"
			        />
			
			</RelativeLayout>
		</ScrollView>
	</LinearLayout>
</com.neverworker.oknow.widget.PercentAnimFrameLayout>