<com.neverworker.oknow.widget.PercentAnimFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.neverworker.oknow.MainActivity$LoginFragment">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/login_background"
	    android:orientation="vertical"
	    android:paddingLeft="40dip"
	    android:paddingRight="40dip"
	    >
	
	    <ImageView
	        android:contentDescription="@string/imageview"
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	android:paddingLeft="20dip"
	    	android:paddingRight="20dip"
	    	android:scaleType="fitEnd"
	    	android:src="@drawable/login_logo"
	        />
	    
		<EditText
		    android:id="@+id/login_username"
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
		    android:layout_weight="0.4"
			android:gravity="center"
			android:freezesText="true"
			android:singleLine="true"
		    android:hint="@string/login_username"
		    />
		<EditText
		    android:id="@+id/login_password"
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
		    android:layout_weight="0.4"
			android:gravity="center"
			android:freezesText="true"
	        android:inputType="textPassword"
		    android:hint="@string/login_password"
		    />
	
	    <LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="0.6"
	    	android:orientation="horizontal"
	        >
	        <ImageView
		        android:contentDescription="@string/imageview"
			    android:id="@+id/login_facebook"
			    android:layout_width="0dip"
	    		android:layout_height="match_parent"
	    		android:layout_weight="1"
	    		android:src="@drawable/login_facebook"
	    		android:clickable="true"
	            />
	        <ImageView
		        android:contentDescription="@string/imageview"
			    android:id="@+id/login_twitter"
			    android:layout_width="0dip"
	    		android:layout_height="match_parent"
	    		android:layout_weight="1"
	    		android:src="@drawable/login_twitter"
	    		android:clickable="true"
	            />
	        
	    </LinearLayout>
	
	    <TextView
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
		    android:layout_weight="0.2"
		    android:gravity="center|top"
		    android:textColor="#FF888888"
		    android:text="@string/login_another_way_describe"
	        />
	    <ImageView
	        android:contentDescription="@string/imageview"
			android:id="@+id/login_signup"
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="0.6"
	    	android:src="@drawable/login_signup"
	    	android:clickable="true"
	            />    
	    <TextView
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
		    android:layout_weight="0.2"
		    android:gravity="center|top"
		    android:textColor="#FF888888"
		    android:text="@string/login_register_describe"
	        />
	    <View 
		    android:layout_width="match_parent"
	    	android:layout_height="0dip"
		    android:layout_weight="0.4"
	        />
	
	</LinearLayout>
</com.neverworker.oknow.widget.PercentAnimFrameLayout>