<com.neverworker.oknow.widget.PercentAnimFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.neverworker.oknow.MainActivity$PostFragment">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@drawable/chat_background"
	     >
	
	    <LinearLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:background="#FFEAEAEA"
	    	>
	    	<TextView 
				android:id="@+id/post_cancel"
		    	android:layout_width="wrap_content"
	    		android:layout_height="match_parent"
	    		android:padding="8dip"
	    		android:gravity="center"
	    		android:textColor="#4455FF"
	    		android:textSize="22sp"
	    		android:text="@string/post_cancel"
	    	    />
	    	<TextView 
		    	android:layout_width="0dip"
	    		android:layout_height="match_parent"
	    		android:layout_weight="1"
	    		android:padding="10dip"
	    		android:gravity="center"
	    		android:textSize="28sp"
	    		android:text="@string/post_title"
	    	    />
	    	<TextView 
				android:id="@+id/post_confirm"
		    	android:layout_width="wrap_content"
	    		android:layout_height="match_parent"
	    		android:padding="8dip"
	    		android:gravity="center"
	    		android:textColor="#4455FF"
	    		android:textSize="22sp"
	    		android:text="@string/post_push"
	    	    />
	    	
	    </LinearLayout>
	    <RelativeLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"        
	        >
	        <LinearLayout
			    android:layout_width="match_parent"
	    		android:layout_height="match_parent"
	    		android:layout_marginTop="50dip"
	    		android:padding="12dip"
	    		android:orientation="vertical"
	            >
		    	<TextView 
					android:id="@+id/post_category_title"
			    	android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:padding="6dip"
		    		android:gravity="right"
		    		android:background="@color/oknow_green"
		    		android:textColor="@android:color/white"
		    		android:textSize="26sp"
		    		android:text="@string/post_category_default"
		    	    />
		    	
		    	<EditText 
					android:id="@+id/post_content"
			    	android:layout_width="match_parent"
		    		android:layout_height="0dip"
		    		android:layout_weight="1"
		    		android:padding="8dip"
		    		android:gravity="top"
		    		android:background="@android:color/white"
		    		android:inputType="textMultiLine"
		    		android:minLines="3"
		    		android:textSize="18sp"
		    		android:hint="@string/post_content_default"
		    	    />
		    	
		    	<com.neverworker.oknow.widget.HorizontalSelector
					android:id="@+id/post_category_selector"
			    	android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:orientation="horizontal"
		    		android:fillViewport="true"
		    		android:background="#FFCCCCCC"
		    		android:scrollbars="none"
		    		/>
	        </LinearLayout>
	        <com.neverworker.oknow.widget.RoundedImageView 
			    android:layout_width="80dip"
		    	android:layout_height="80dip"
		    	android:layout_marginTop="10dip"
		    	android:layout_marginLeft="40dip"
		    	android:src="@drawable/post_unknownuser"
	            />
	    </RelativeLayout>
	
	</LinearLayout>
</com.neverworker.oknow.widget.PercentAnimFrameLayout>